--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="stylessheet.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+  <script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script>
 </head>
 <body>
 
@@ -48,6 +49,7 @@
   <div class="-display-bottomleft -text-grey -large" style="padding:24px 48px">
     <span class="social-links">Facebook | Instagram | Snapchat | Pinterest | Twitter | LinkedIn</span>
   </div>
+<script type='text/javascript'>kofiwidget2.init('Support me on Ko-fi!', '#0582ff', 'P5P71738DD');kofiwidget2.draw();</script> 
 </header>
 
 <!-- About Section -->
