UPDATE: Laptop Fetch

--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="stylessheet.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+  <script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script>
 </head>
 <body>
 
-<!-- Navbar (sit on top) -->
+<!-- Navbar (sit on top) boop -->
 <div class="thetop">
   <div class="-bar -white -card" id="myNavbar">
     <a href="#home" class="-bar-item -button -wide">LOGO</a>
@@ -48,6 +49,7 @@
   <div class="-display-bottomleft -text-grey -large" style="padding:24px 48px">
     <span class="social-links">Facebook | Instagram | Snapchat | Pinterest | Twitter | LinkedIn</span>
   </div>
+<script type='text/javascript'>kofiwidget2.init('Support me on Ko-fi!', '#0582ff', 'P5P71738DD');kofiwidget2.draw();</script> 
 </header>
 
 <!-- About Section -->
