Update: Fixed merge issue and adjusted ko-fi btn

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
+<script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script>
 <body>
 
 <!-- Navbar (sit on top) boop -->
@@ -48,8 +49,8 @@
   </div> 
   <div class="-display-bottomleft -text-grey -large" style="padding:24px 48px">
     <span class="social-links">Facebook | Instagram | Snapchat | Pinterest | Twitter | LinkedIn</span>
+    <script type='text/javascript'>kofiwidget2.init('Support me on Ko-fi!', '#0582ff', 'P5P71738DD');kofiwidget2.draw();</script> 
   </div>
-<script type='text/javascript'>kofiwidget2.init('Support me on Ko-fi!', '#0582ff', 'P5P71738DD');kofiwidget2.draw();</script> 
 </header>
 
 <!-- About Section -->
