UPDATE: Added javascript container for social media link clickables, can further the javascript file to enforce animations, transitions, color properties etc.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
+
+<script src="e4script.js"></script>
 <script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script>
+
 <body>
 
 <!-- Navbar (sit on top) boop -->
@@ -48,7 +51,12 @@
     <p><a href="#about" class="-button -white -padding-large -large -margin-top -opacity -hover-opacity-off">Learn more and start today</a></p>
   </div> 
   <div class="-display-bottomleft -text-grey -large" style="padding:24px 48px">
-    <span class="social-links">Facebook | Instagram | Snapchat | Pinterest | Twitter | LinkedIn</span>
+    <div class="social-icons">
+      <a id="facebook-icon" href="javascript:void(0);"><img src="facebook-icon.png" alt="Facebook"></a>
+      <a id="twitter-icon" href="javascript:void(0);"><img src="twitter-icon.png" alt="Twitter"></a>
+      <a id="instagram-icon" href="javascript:void(0);"><img src="instagram-icon.png" alt="Instagram"></a>
+      <a id="linkedin-icon" href="javascript:void(0);"><img src="linkedin-icon.png" alt="LinkedIn"></a>
+    </div>    
     <script type='text/javascript'>kofiwidget2.init('Support me on Ko-fi!', '#0582ff', 'P5P71738DD');kofiwidget2.draw();</script> 
   </div>
 </header>
