UPDATE: Added new social media icons, clickable buttons that lead to each social media page added adjustability for the ko-fi icon.
TODO:
Configure colors/aesthetics, get php for email
plug-ins.

--- a/index.html
+++ b/index.html
@@ -52,12 +52,11 @@
   </div> 
   <div class="-display-bottomleft -text-grey -large" style="padding:24px 48px">
     <div class="social-icons">
-      <a id="facebook-icon" href="javascript:void(0);"><img src="facebook-icon.png" alt="Facebook"></a>
-      <a id="twitter-icon" href="javascript:void(0);"><img src="twitter-icon.png" alt="Twitter"></a>
-      <a id="instagram-icon" href="javascript:void(0);"><img src="instagram-icon.png" alt="Instagram"></a>
-      <a id="linkedin-icon" href="javascript:void(0);"><img src="linkedin-icon.png" alt="LinkedIn"></a>
-    </div>    
-    <script type='text/javascript'>kofiwidget2.init('Support me on Ko-fi!', '#0582ff', 'P5P71738DD');kofiwidget2.draw();</script> 
+      <a id="facebook-icon" href="javascript:void(0);"><img src="Pictures/facebook-icon.png" height="36px" alt="Facebook"></a>
+      <a id="instagram-icon" href="javascript:void(0);"><img src="Pictures/instagram-icon.png" height="36px" alt="E4OS Instagram"></a>
+      <a id="linkedin-icon" href="javascript:void(0);"><img src="Pictures/linkedin-icon.png" height="36px" alt="LinkedIn"></a>
+      <a href='https://ko-fi.com/P5P71738DD' target='_blank'><img height='36' style='border:0px;height:36px;' src='https://storage.ko-fi.com/cdn/kofi5.png?v=6' border='0' alt='Support me with a coffee!' /></a>
+  </div>    
   </div>
 </header>
 
